[package]
name = "rust_partdiff"
version = "0.1.0"
authors = ["Michael Blesel <michaelblesel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = []
2d-array-indexing = []
C-style-indexing = []
unsafe-indexing = []

[dependencies]
